Update files to match repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,16 +17,16 @@ if (PICO_SDK_VERSION_STRING VERSION_LESS "1.4.0")
   message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.4.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
 endif()
 
-project(rfm69_pico_lib C CXX ASM)
+project(rfm69_rp2040_lib C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 add_library(rfm69_pico STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_pico_interface.c
-	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_pico_interface.h
-	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_pico_rudp.c
-	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_pico_rudp.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_rp2040_interface.c
+	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_rp2040_interface.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_rp2040_rudp.c
+	${CMAKE_CURRENT_SOURCE_DIR}/src/rfm69_rp2040_rudp.h
 )
 
 target_include_directories(rfm69_pico INTERFACE
