Build RUDP example and update interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(rfm69_pico C CXX ASM)
+project(rfm69_rp2040 C CXX ASM)
 
-add_library(rfm69_pico 
+add_library(rfm69_rp2040 
 	src/rfm69_rp2040_interface.c
 	src/rfm69_rp2040_rudp.c
 )
 
-target_include_directories(rfm69_pico PUBLIC 
+target_include_directories(rfm69_rp2040 PUBLIC 
 	src
 )
 
-target_link_libraries(rfm69_pico PUBLIC
+target_link_libraries(rfm69_rp2040 PUBLIC
 	pico_stdlib
 	hardware_spi
 	pico_rand
